# xatlas-comparison

./: CMakeLists.txt  README.md  results.csv  results_aggregator.py
libs/gpu/libgpu/: shared_device_buffer.cpp  shared_device_buffer.h
libs/gpu/libgpu/cuda/cu/: opencl_translator.cu
libs/gpu/libgpu/opencl/: engine.cpp
libs/ply_shape/: ply_shape.cpp  ply_shape.h
libs/utils/: timer.h
libs/xatlas/: xatlas.cpp  xatlas.h
libs/xatlas-old/: xatlas.cpp  xatlas.h
libs/xatlas/cl/: add.cl  blit.cl  blit_cl.h
libs/xatlas/cu/: blit.cu
src/: main.cpp  parameters.h  scratch_gpu.cpp  test_bitTree.cpp  test_bitTree.h  test_compressor.cpp  test_compressor.h  test_ctf.cpp  x_example.cpp  x_old_example.cpp
src/cl/: blit.cl  blit_cl.h
